--- a/org.jboss.reddeer.junit.test/pom.xml
+++ b/org.jboss.reddeer.junit.test/pom.xml
@@ -11,7 +11,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../org.jboss.reddeer.parent/pom.xml</relativePath>
 	</parent>
-	
+
 
 
 	<build>
@@ -71,6 +71,13 @@
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.8.3</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
