SWT Layer Widgets API skeleton added and some layer updates

--- a/org.jboss.reddeer.swt/build.properties
+++ b/org.jboss.reddeer.swt/build.properties
@@ -1,5 +1,6 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               src/log4j.xml
 additional.bundles = org.eclipse.swtbot.go
