workbench and workbench.test modules added into parent pom

--- a/org.jboss.reddeer.parent/pom.xml
+++ b/org.jboss.reddeer.parent/pom.xml
@@ -16,6 +16,8 @@
 	<modules>
 		<module>../org.jboss.reddeer.swt</module>
 		<module>../org.jboss.reddeer.swt.test</module>
+		<module>../org.jboss.reddeer.workbench</module>
+		<module>../org.jboss.reddeer.workbench.test</module>
 		<module>../org.jboss.reddeer.jface</module>
 		<module>../org.jboss.reddeer.jface.test</module>
 		<module>../org.jboss.reddeer.eclipse</module>
