--- a/org.jboss.reddeer.parent/pom.xml
+++ b/org.jboss.reddeer.parent/pom.xml
@@ -110,6 +110,11 @@
 							<artifactId>jmock-junit4</artifactId>
 							<version>2.5.1</version>
 						</dependency>
+						<dependency>
+							<type>p2-installable-unit</type>
+							<artifactId>org.eclipse.jdt.ui</artifactId>
+							<version>0.0.0</version>
+						</dependency>
 					</dependencies>
 					<includes>
 						<include>**/*Test.class</include>
