--- a/org.jboss.reddeer.workbench.test/plugin.xml
+++ b/org.jboss.reddeer.workbench.test/plugin.xml
@@ -1,28 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<plugin
-   name="Custom View Plugin"                            
-   id="org.jboss.reddeer.workbench.test.ui.views"
-   version="1.0.0"
-   provider-name="OTI">
-
-<requires>
-        <import plugin="org.eclipse.core.boot"/>
-        <import plugin="org.eclipse.core.runtime"/>
-        <import plugin="org.eclipse.core.resources"/>
-        <import plugin="org.eclipse.swt"/>
-        <import plugin="org.eclipse.ui"/>
-</requires>
-
-<runtime>
-        <library name="views.jar"/>
-</runtime>
-
-<extension point="org.eclipse.ui.views">
-        <view id="org.jboss.reddeer.workbench.test.ui.views.labelview"
-             name="Label View"
-          class="org.jboss.reddeer.workbench.test.ui.views.LabelView"
-          icon="icons\view.gif"/>
-</extension>
-
+<?eclipse version="3.2"?>
+<plugin>
+   	<extension point="org.eclipse.ui.views">
+   		<category 
+           id="org.jboss.reddeer.workbench.test.ui.category"
+           name="Test Category">
+        </category>
+    	<view id="org.jboss.reddeer.workbench.test.ui.views.labelview"
+        	name="Label View"
+        	category="org.jboss.reddeer.workbench.test.ui.category"
+        	class="org.jboss.reddeer.workbench.test.ui.views.LabelView" />
+	</extension>
 </plugin>
