--- a/org.jboss.reddeer.eclipse.test/pom.xml
+++ b/org.jboss.reddeer.eclipse.test/pom.xml
@@ -13,4 +13,14 @@
 		<relativePath>../org.jboss.reddeer.parent/pom.xml</relativePath>
 	</parent>
 
+	<profiles>
+		<profile>
+			<id>mvn-debug</id>
+			<properties>
+				<memoryOptions1>-Xdebug -Xrunjdwp:transport=dt_socket,address=8001,server=y,suspend=y</memoryOptions1>
+				<systemProperties>-Xdebug -Xrunjdwp:transport=dt_socket,address=8001,server=y,suspend=y</systemProperties>
+			</properties>
+		</profile>
+	</profiles>
+
 </project>
