--- a/org.jboss.reddeer.eclipse.test/plugin.xml
+++ b/org.jboss.reddeer.eclipse.test/plugin.xml
@@ -9,15 +9,24 @@
    	</extension>
    	<extension point="org.eclipse.wst.server.core.serverTypes">
    		<serverType
-           behaviourClass="org.jboss.reddeer.eclipse.wst.server.ui.view.TestServerBehaviour"
-           class="org.jboss.reddeer.eclipse.wst.server.ui.view.TestServer"
+           behaviourClass="org.jboss.reddeer.eclipse.test.wst.server.ui.view.TestServerBehaviour"
+           class="org.jboss.reddeer.eclipse.test.wst.server.ui.view.TestServer"
            description="Test server"
            hasConfiguration="false"
-           id="org.jboss.reddeer.eclipse.wst.server.ui.view.testserver"
+           id="org.jboss.reddeer.eclipse.test.wst.server.ui.view.testserver"
            initialState="stopped"
            name="Test server"
+           launchModes="run,debug,profile"
+		   launchConfigId="org.jboss.reddeer.eclipse.test.wst.server.ui.view.testlaunchconfiguratindelegate"
            runtime="true"
            runtimeTypeId="org.jboss.reddeer.eclipse.test.wst.server.testserverruntime"
            supportsRemoteHosts="true"/>
    	</extension>
+	<extension point="org.eclipse.debug.core.launchConfigurationTypes">
+ 		<launchConfigurationType
+ 			id="org.jboss.reddeer.eclipse.test.wst.server.ui.view.testlaunchconfiguratindelegate"
+ 			name="Test Configuration"
+ 			delegate="org.jboss.reddeer.eclipse.test.wst.server.ui.view.TestLaunchConfigurationDelegate"
+ 			modes="run,debug,profile"/>
+ 	</extension>
 </plugin>
