Mavenized wiki examples project

--- a/org.jboss.reddeer.parent/pom.xml
+++ b/org.jboss.reddeer.parent/pom.xml
@@ -28,6 +28,7 @@
 		<module>../org.jboss.reddeer.junit</module>
 		<module>../org.jboss.reddeer.junit.test</module>
 		<module>../org.jboss.reddeer.selenium</module>
+		<module>../org.jboss.reddeer.wiki.examples</module>
 	</modules>
 	
 	<build>
