Added workbench to feature.xml + build of update site to parent pom

--- a/org.jboss.reddeer.parent/pom.xml
+++ b/org.jboss.reddeer.parent/pom.xml
@@ -29,6 +29,7 @@
 		<module>../org.jboss.reddeer.junit.test</module>
 		<module>../org.jboss.reddeer.selenium</module>
 		<module>../org.jboss.reddeer.wiki.examples</module>
+		<module>../org.jboss.reddeer.site</module>
 	</modules>
 	
 	<build>
