Initial implementation of ViewToolbar added

--- a/org.jboss.reddeer.swt.test/build.properties
+++ b/org.jboss.reddeer.swt.test/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               src/log4j.xml
+               src/log4j.xml,\
+               plugin.xml
