--- a/org.jboss.reddeer.swt.test/plugin.xml
+++ b/org.jboss.reddeer.swt.test/plugin.xml
@@ -39,53 +39,12 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="org.jboss.reddeer.swt.test.handler.TestHandler"
-            commandId="org.jboss.reddeer.swt.test.command.rdswtcommand">
-      </handler>
-      <handler
-            class="org.jboss.reddeer.swt.test.handlers.SampleHandler"
-            commandId="org.jboss.reddeer.swt.test.commands.sampleCommand">
+            class="org.jboss.reddeer.swt.test.handlers.TestHandler"
+            commandId="org.jboss.reddeer.swt.test.command.testCommand">
       </handler>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
-      <menuContribution
-            allPopups="true"
-            locationURI="toolbar:org.eclipse.ui.views.ContentOutline?after=additions">
-         <command
-               commandId="org.jboss.reddeer.swt.test.command.testCommand"
-               disabledIcon="icons/sample.gif"
-               icon="icons/sample.gif"
-               label="SWTTest"
-               mnemonic="RD Test"
-               style="push"
-               tooltip="SWT Test Tooltip">
-         </command>
-      </menuContribution>
-      <menuContribution
-            allPopups="false"
-            locationURI="menu:org.eclipse.ui.main.menu">
-         <menu
-               id="reddeerMenu"
-               label="RedDeer">
-            <command
-                  commandId="org.jboss.reddeer.swt.test.command.testCommand"
-                  icon="icons/sample.gif"
-                  label="Test"
-                  mnemonic="abcd"
-                  style="push"
-                  tooltip="abcd">
-            </command>
-         </menu>
-         <toolbar
-               id="org.jboss.reddeer.swt.test.toolbar2"
-               label="abcde">
-            <command
-                  commandId="org.jboss.reddeer.swt.test.command.testCommand"
-                  style="push">
-            </command>
-         </toolbar>
-      </menuContribution>
       <menuContribution
             allPopups="false"
             locationURI="toolbar:org.jboss.reddeer.swt.test.swtview">
@@ -93,45 +52,24 @@
                commandId="org.jboss.reddeer.swt.test.command.testCommand"
                icon="icons/sample.gif"
                label="Test"
-               mnemonic="abcd"
+               mnemonic="RedDeer SWT ViewToolItem"
                style="push"
-               tooltip="RedDeer SWT ToolItem">
+               tooltip="RedDeer SWT ViewToolItem">
          </command>
-      </menuContribution>
-      <menuContribution
-            locationURI="menu:org.eclipse.ui.main.menu?after=additions">
-         <menu
-               id="org.jboss.reddeer.swt.test.menus.sampleMenu"
-               label="Sample Menu"
-               mnemonic="M">
-            <command
-                  commandId="org.jboss.reddeer.swt.test.commands.sampleCommand"
-                  id="org.jboss.reddeer.swt.test.menus.sampleCommand"
-                  mnemonic="S">
-            </command>
-         </menu>
       </menuContribution>
       <menuContribution
             locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
          <toolbar
                id="org.jboss.reddeer.swt.test.toolbars.sampleToolbar">
             <command
-                  commandId="org.jboss.reddeer.swt.test.commands.sampleCommand"
+                  commandId="org.jboss.reddeer.swt.test.command.testCommand"
                   icon="icons/sample.gif"
                   id="org.jboss.reddeer.swt.test.toolbars.sampleCommand"
-                  tooltip="Say hello world">
+                  mnemonic="RedDeer SWT WorkbenchToolItem"
+                  tooltip="RedDeer SWT WorkbenchToolItem">
             </command>
          </toolbar>
       </menuContribution>
-   </extension>
-   <extension
-         point="org.eclipse.ui.bindings">
-      <key
-            commandId="org.jboss.reddeer.swt.test.commands.sampleCommand"
-            contextId="org.eclipse.ui.contexts.window"
-            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-            sequence="M1+6">
-      </key>
    </extension>
 
 </plugin>
