--- a/org.jboss.reddeer.parent/pom.xml
+++ b/org.jboss.reddeer.parent/pom.xml
@@ -149,5 +149,13 @@
 				</releases>
 		</repository>
 	</repositories>
-	
+	<profiles>
+		<profile>
+			<id>mvn-debug</id>
+			<properties>
+				<systemProperties>-Xdebug
+					-Xrunjdwp:transport=dt_socket,address=8001,server=y,suspend=y</systemProperties>
+			</properties>
+		</profile>
+	</profiles>	
 </project>
