--- a/org.jboss.reddeer.parent/pom.xml
+++ b/org.jboss.reddeer.parent/pom.xml
@@ -153,8 +153,7 @@
 		<profile>
 			<id>mvn-debug</id>
 			<properties>
-				<systemProperties>-Xdebug
-					-Xrunjdwp:transport=dt_socket,address=8001,server=y,suspend=y</systemProperties>
+				<systemProperties>-Xdebug -Xrunjdwp:transport=dt_socket,address=8001,server=y,suspend=y</systemProperties>
 			</properties>
 		</profile>
 	</profiles>	
