updated .gitignore not to ignore .project and .classpath  files

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 #java specific
- *.class
- #netbeans ignore personal stuff
- nbproject/private/
- ## generic files to ignore
- *~
- *.lock
- *.DS_Store
- *.swp
- *.out
- *.
- !/.gitignore
+*.class
+#netbeans ignore personal stuff
+nbproject/private/
+## generic files to ignore
+*~
+*.lock
+*.DS_Store
+*.swp
+*.out
+.*
+!.gitignore
+!.project
+!.classpath
+
