--- a/org.jboss.reddeer.parent/pom.xml
+++ b/org.jboss.reddeer.parent/pom.xml
@@ -103,7 +103,7 @@
 					<useUIHarness>true</useUIHarness>
 					<useUIThread>false</useUIThread>
 					<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
-					<argLine> ${memoryOptions1}</argLine>
+					<argLine> </argLine>
 					<product>org.eclipse.platform.ide</product>
 					<application>org.eclipse.ui.ide.workbench</application>
 					<dependencies>
@@ -149,12 +149,4 @@
 				</releases>
 		</repository>
 	</repositories>
-	<profiles>
-		<profile>
-			<id>mvn-debug</id>
-			<properties>
-				<systemProperties>-Xdebug -Xrunjdwp:transport=dt_socket,address=8001,server=y,suspend=y</systemProperties>
-			</properties>
-		</profile>
-	</profiles>	
 </project>
