Add license, description and copiright to feature and plugins
The RedDeer feature was lacking any kind of description or legal
information. Also, the plugins needed a definition of Bundle-Vendor
and about.html for license information.

--- a/org.jboss.reddeer.swt.test/build.properties
+++ b/org.jboss.reddeer.swt.test/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                src/log4j.xml,\
+               about.html,\
                plugin.xml
