--- a/org.jboss.reddeer.swt/build.properties
+++ b/org.jboss.reddeer.swt/build.properties
@@ -2,5 +2,6 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
+               about.html,\
                src/log4j.xml
 additional.bundles = org.eclipse.swtbot.go
