--- a/org.jboss.reddeer.junit/build.properties
+++ b/org.jboss.reddeer.junit/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
+               about.html,\
                lib/commons-beanutils-core-1.8.3.jar
