--- a/org.jboss.reddeer.parent/pom.xml
+++ b/org.jboss.reddeer.parent/pom.xml
@@ -9,7 +9,8 @@
 	<packaging>pom</packaging>
 	
 	<properties>
- 	   	<tycho-version>0.14.0</tycho-version>  	  
+ 	   	<tycho-version>0.16.0</tycho-version>  	  
+		<tychoExtrasVersion>0.16.0</tychoExtrasVersion>
 		<eclipse-target-site>http://download.eclipse.org/releases/kepler</eclipse-target-site>
 		<swtbot-update-site>http://download.eclipse.org/technology/swtbot/helios/dev-build/update-site</swtbot-update-site>
 		<platformSystemProperties></platformSystemProperties>
@@ -133,9 +134,22 @@
 					<includes>
 						<include>**/*Test.class</include>
 					</includes>
-					<parallel>true</parallel>
 				</configuration>
 			</plugin>
+                        <!-- source for bundles -->
+                        <plugin>
+                                <groupId>org.eclipse.tycho</groupId>
+                                <artifactId>tycho-source-plugin</artifactId>
+                                <version>${tycho-version}</version>
+                                <executions>
+                                        <execution>
+                                                <id>plugin-source</id>
+                                                <goals>
+                                                        <goal>plugin-source</goal>
+                                                </goals>
+                                        </execution>
+                                </executions>
+                        </plugin>
 		</plugins>	
 	</build>
 
