Initial commit of requirements plugin. This commit includes implementation of CleanWorkspace requirement with tests.

--- a/org.jboss.reddeer.parent/pom.xml
+++ b/org.jboss.reddeer.parent/pom.xml
@@ -33,6 +33,8 @@
 		<module>../org.jboss.reddeer.selenium</module>
 		<module>../org.jboss.reddeer.wiki.examples</module>
 		<module>../org.jboss.reddeer.site</module>
+		<module>../org.jboss.reddeer.requirements</module>
+		<module>../org.jboss.reddeer.requirements.test</module>
 	</modules>
 	
 	<build>
