Plugin org.jboss.reddeer.ui propagated to parent pom and feature.xml.

--- a/org.jboss.reddeer.parent/pom.xml
+++ b/org.jboss.reddeer.parent/pom.xml
@@ -35,6 +35,7 @@
 		<module>../org.jboss.reddeer.site</module>
 		<module>../org.jboss.reddeer.requirements</module>
 		<module>../org.jboss.reddeer.requirements.test</module>
+		<module>../org.jboss.reddeer.ui</module>
 	</modules>
 	
 	<build>
