new plugins org.jboss.reddeer.uiforms and org.jboss.reddeer.uiforms.test implemented

--- a/org.jboss.reddeer.parent/pom.xml
+++ b/org.jboss.reddeer.parent/pom.xml
@@ -21,6 +21,8 @@
 		<module>../org.jboss.reddeer.swt.test</module>
 		<module>../org.jboss.reddeer.workbench</module>
 		<module>../org.jboss.reddeer.workbench.test</module>
+		<module>../org.jboss.reddeer.uiforms</module>
+		<module>../org.jboss.reddeer.uiforms.test</module>
 		<module>../org.jboss.reddeer.jface</module>
 		<module>../org.jboss.reddeer.jface.test</module>
 		<module>../org.jboss.reddeer.eclipse</module>
