Log4j references were removed from build.properties

--- a/org.jboss.reddeer.swt/build.properties
+++ b/org.jboss.reddeer.swt/build.properties
@@ -2,6 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               about.html,\
-               src/log4j.xml
+               about.html
 additional.bundles = org.eclipse.swtbot.go
