First commit of 0.2.x branch - RedDeer 0.2.0 ready for release
Branch 0.2.x is based on the last commit before master broke
juno compatibility. This commit prepares everything for 0.2.0
release. The next commit will move everything to 0.2.1-SNAPSHOT.

--- a/org.jboss.reddeer.junit.test/pom.xml
+++ b/org.jboss.reddeer.junit.test/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.jboss.reddeer</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.2.0-SNAPSHOT</version>
+		<version>0.2.0</version>
 		<relativePath>../org.jboss.reddeer.parent/pom.xml</relativePath>
 	</parent>
 
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.jboss.reddeer</groupId>
 			<artifactId>org.jboss.reddeer.junit</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
+			<version>0.2.0</version>
 			<type>eclipse-plugin</type>
 		</dependency>
 
