--- a/org.jboss.reddeer.ui/pom.xml
+++ b/org.jboss.reddeer.ui/pom.xml
@@ -7,7 +7,7 @@
   <parent>
 		<groupId>org.jboss.reddeer</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.3.0</version>
+		<version>0.3.1-SNAPSHOT</version>
 		<relativePath>../org.jboss.reddeer.parent/pom.xml</relativePath>
   </parent>
   
