--- a/org.jboss.reddeer.junit.test/pom.xml
+++ b/org.jboss.reddeer.junit.test/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.jboss.reddeer</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.3.1</version>
+		<version>0.4.0-SNAPSHOT</version>
 		<relativePath>../org.jboss.reddeer.parent/pom.xml</relativePath>
 	</parent>
 
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.jboss.reddeer</groupId>
 			<artifactId>org.jboss.reddeer.junit</artifactId>
-			<version>0.3.1</version>
+			<version>0.4.0-SNAPSHOT</version>
 			<type>eclipse-plugin</type>
 		</dependency>
 
