Broken build due to failing due failing dependency fixed

--- a/org.jboss.reddeer.parent/pom.xml
+++ b/org.jboss.reddeer.parent/pom.xml
@@ -117,7 +117,7 @@
 					<dependencies>
 						<dependency>
 							<type>p2-installable-unit</type>
-							<artifactId>org.eclipse.platform.ide</artifactId>
+							<artifactId>org.eclipse.platform</artifactId>
 							<version>0.0.0</version>
 						</dependency>
 						<dependency>
