--- a/org.jboss.reddeer.junit/build.properties
+++ b/org.jboss.reddeer.junit/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                about.html,\
+               log4j.properties,\
                lib/commons-beanutils-core-1.8.3.jar
