--- a/org.jboss.reddeer.swt/build.properties
+++ b/org.jboss.reddeer.swt/build.properties
@@ -2,5 +2,6 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
+               log4j.properties,\
                about.html
 additional.bundles = org.eclipse.swtbot.go
