Adds org.eclipse.jdt feature as dependency

--- a/org.jboss.reddeer.requirements.test/pom.xml
+++ b/org.jboss.reddeer.requirements.test/pom.xml
@@ -21,6 +21,14 @@
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<configuration>
 					<useUIThread>false</useUIThread>
+					<dependencies combine.children="append">
+						<!-- This entry should enable creating of default JDK on Mac -->
+						<dependency>
+							<type>p2-installable-unit</type>
+							<artifactId>org.eclipse.jdt.feature.group</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+					</dependencies>
 				</configuration>
 			</plugin>
 		</plugins>
