--- a/org.jboss.reddeer.eclipse.test/pom.xml
+++ b/org.jboss.reddeer.eclipse.test/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.jboss.reddeer.eclipse.test</artifactId>
 	<name>Red Deer Eclipse Component Tests</name>
-    <packaging>eclipse-test-plugin</packaging>
+	<packaging>eclipse-test-plugin</packaging>
 
 	<parent>
 		<groupId>org.jboss.reddeer</groupId>
@@ -12,5 +12,22 @@
 		<version>0.4.0-SNAPSHOT</version>
 		<relativePath>../org.jboss.reddeer.parent/pom.xml</relativePath>
 	</parent>
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<configuration>
+					<dependencies combine.children="append">
+						<!-- This entry should enable creating of default JDK on Mac -->
+						<dependency>
+							<type>p2-installable-unit</type>
+							<artifactId>org.eclipse.jdt.feature.group</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+					</dependencies>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
