--- a/org.jboss.reddeer.uiforms.test/pom.xml
+++ b/org.jboss.reddeer.uiforms.test/pom.xml
@@ -19,12 +19,20 @@
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
-					<configuration>
-						<useUIThread>false</useUIThread>
-					</configuration>
-			</plugin>		
+				<configuration>
+					<useUIThread>false</useUIThread>
+					<dependencies combine.children="append">
+						<!-- This entry should enable creating of default JDK on Mac -->
+						<dependency>
+							<type>p2-installable-unit</type>
+							<artifactId>org.eclipse.jdt.feature.group</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+					</dependencies>
+				</configuration>
+			</plugin>
 		</plugins>
-	</build>	
+	</build>
 
 
 </project>
