Detailed feature list #215
Instead of one feature for all, have different features for different parts
of RedDeer.

--- a/features/org.jboss.reddeer.eclipse.feature/feature.properties
+++ b/features/org.jboss.reddeer.eclipse.feature/feature.properties
@@ -15,5 +15,5 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=RedDeer Feature
+featureName=RedDeer Eclipse Testing Feature
 
