--- a/features/org.jboss.reddeer.swt.feature/.project
+++ b/features/org.jboss.reddeer.swt.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.jboss.reddeer.feature</name>
+	<name>org.jboss.reddeer.swt.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
