--- a/features/pom.xml
+++ b/features/pom.xml
@@ -14,7 +14,12 @@
 	
 	
 	<modules>
-		<module>org.jboss.reddeer.feature</module>
+		<module>org.jboss.reddeer.eclipse.feature</module>
+		<module>org.jboss.reddeer.examples.feature</module>
+		<module>org.jboss.reddeer.rcp.feature</module>
+		<module>org.jboss.reddeer.swt.feature</module>
+		<module>org.jboss.reddeer.tests.feature</module>
+		<module>org.jboss.reddeer.ui.feature</module>
 	</modules>
 	
 </project>
