Implements screencasting of failed test fixes #322

--- a/plugins/org.jboss.reddeer.junit/build.properties
+++ b/plugins/org.jboss.reddeer.junit/build.properties
@@ -3,4 +3,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                about.html,\
-               lib/commons-beanutils-core-1.8.3.jar
+               monte-library-license.html,\
+               build.properties,\
+               lib/,\
+               lib/ScreenRecorder.jar
