--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -26,6 +26,7 @@
 		<module>org.jboss.reddeer.examples</module>
 		<module>org.jboss.reddeer.requirements</module>
 		<module>org.jboss.reddeer.ui</module>
+		<module>org.jboss.reddeer.recorder</module>
 	</modules>
 	
 </project>
