Set ignore.test.failure to true by default
As requested, I am adding this default settings
to our root pom.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<pauseFailedTest>false</pauseFailedTest>
 		<recordScreenCast>false</recordScreenCast>
 		<surefire.timeout>2400</surefire.timeout>
+		<maven.test.failure.ignore>true</maven.test.failure.ignore>
 	</properties>
 	
 	<modules>
