Adds extension point org.jboss.reddeer.junit.before.test. Part of #456

--- a/plugins/org.jboss.reddeer.junit/build.properties
+++ b/plugins/org.jboss.reddeer.junit/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                monte-library-license.html,\
                build.properties,\
                lib/,\
-               lib/ScreenRecorder.jar
+               lib/ScreenRecorder.jar,\
+               plugin.xml
