Defines Extension for org.jboss.reddeer.junit.before.test ext. point. Part of #456.
Proceeds these actions prior first test is run:

- closes Welcome Screen
- disables downloading of Maven Repo Indexes on startup

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -21,6 +21,7 @@
 		<module>org.jboss.reddeer.tests.feature</module>
 		<module>org.jboss.reddeer.ui.feature</module>
 		<module>org.jboss.reddeer.recorder.feature</module>
+		<module>org.jboss.reddeer.junit.eclipseext.feature</module>
 	</modules>
 	
 </project>
