Improves performance of o.j.r.junit.before.test extension.point processing. Part of #456
- adds possiblity to decide to run method runBeforeTest() only once for whole test suite
- moves extensions evaluating to RedDeerSuite class
- splits extension to this two classes CloseWelcomeScreenExt and DoNotDownloadMavenIndexesExt
- renamed o.j.r.junit.eclipseext to o.j.t.junit.extension

--- a/features/org.jboss.reddeer.junit.extension.feature/pom.xml
+++ b/features/org.jboss.reddeer.junit.extension.feature/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>org.jboss.reddeer.junit.eclipseext.feature</artifactId>
-	<name>Red Deer JUnit Extensions for Eclipse Feature</name>
+	<artifactId>org.jboss.reddeer.junit.extension.feature</artifactId>
+	<name>Red Deer JUnit Extensions Feature</name>
 	<packaging>eclipse-feature</packaging>
 	
 	<parent>
