--- a/features/org.jboss.reddeer.junit.extension.feature/feature.properties
+++ b/features/org.jboss.reddeer.junit.extension.feature/feature.properties
@@ -15,5 +15,5 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=RedDeer JUnit Extensions for Eclipse Testing Feature
+featureName=RedDeer JUnit Extensions for Testing Feature
 
