--- a/plugins/org.jboss.reddeer.junit.extension/.project
+++ b/plugins/org.jboss.reddeer.junit.extension/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.jboss.reddeer.junit.eclipseext</name>
+	<name>org.jboss.reddeer.junit.extension</name>
 	<comment></comment>
 	<projects>
 	</projects>
