--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -22,7 +22,7 @@
 		<module>org.jboss.reddeer.gef</module>
 		<module>org.jboss.reddeer.direct</module>
 		<module>org.jboss.reddeer.junit</module>
-		<module>org.jboss.reddeer.junit.eclipseext</module>
+		<module>org.jboss.reddeer.junit.extension</module>
 		<module>org.jboss.reddeer.selenium</module>
 		<module>org.jboss.reddeer.examples</module>
 		<module>org.jboss.reddeer.requirements</module>
