REDDEER-346: Call closeAllShells from IAfterTest

--- a/plugins/org.jboss.reddeer.junit.extension/plugin.xml
+++ b/plugins/org.jboss.reddeer.junit.extension/plugin.xml
@@ -10,5 +10,10 @@
             class="org.jboss.reddeer.junit.extension.before.test.impl.DoNotDownloadMavenIndexesExt">
       </client>
    </extension>
-
+   <extension
+         point="org.jboss.reddeer.junit.after.test">
+      <client
+            class="org.jboss.reddeer.junit.extension.after.test.impl.CloseAllShellsExt">
+      </client>
+   </extension>
 </plugin>
