Created Targeted runtimes property page Fixes: #595

--- a/tests/org.jboss.reddeer.eclipse.test/plugin.xml
+++ b/tests/org.jboss.reddeer.eclipse.test/plugin.xml
@@ -32,7 +32,7 @@
  	<extension point = "org.eclipse.ui.propertyPages">
         <page
            id="org.jboss.reddeer.eclipse.ui.dialogs.ProjectPropertyPageTest"
-           name="Property page test page"
+           name="Property page test"
 		   class="org.jboss.reddeer.eclipse.ui.dialogs.TestPropertyPage">
 			<enabledWhen>
 	           <instanceof
