Direct plugin refactored to common, classes deprecated (fixes #610)

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -14,6 +14,7 @@
 	
 	
 	<modules>
+		<module>org.jboss.reddeer.common</module>
 		<module>org.jboss.reddeer.swt</module>
 		<module>org.jboss.reddeer.workbench</module>
 		<module>org.jboss.reddeer.uiforms</module>
