Remote Systems view implemented. Fixies #642.

--- a/tests/org.jboss.reddeer.eclipse.test/pom.xml
+++ b/tests/org.jboss.reddeer.eclipse.test/pom.xml
@@ -76,6 +76,11 @@
 							<artifactId>org.eclipse.wst.server_adapters.feature.feature.group</artifactId>
 							<version>0.0.0</version>
 						</dependency>
+						<dependency>
+							<type>p2-installable-unit</type>
+							<artifactId>org.eclipse.rse.feature.group</artifactId>
+							<version>0.0.0</version>
+						</dependency>
                         <dependency>
                             <type>p2-installable-unit</type>
                             <artifactId>org.eclipse.mylyn.ide_feature.feature.group</artifactId>
